--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "author": "Vishwas",
   "license": "MIT",
   "dependencies": {
+    "clsx": "^1.1.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^6.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
