--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "clsx": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^6.1.1"
+    "react-router-dom": "^6.1.1",
+    "shards-react": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
