--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   "author": "Vishwas",
   "license": "MIT",
   "dependencies": {
+    "@fluentui/react": "^8.49.0",
     "clsx": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^6.1.1",
-    "shards-react": "^1.0.3"
+    "react-router-dom": "^6.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
