--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.22.5",
     "react-router-dom": "^6.1.1"
   },
   "devDependencies": {
