--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "license": "MIT",
   "dependencies": {
     "@fluentui/react": "^8.49.0",
+    "@savchenko91/rc-redux-api-mw": "^2.0.6",
     "clsx": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.22.5",
-    "react-router-dom": "^6.1.1"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.1.1",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
