--- a/package.json
+++ b/package.json
@@ -39,15 +39,16 @@
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.1",
-    "@typescript-eslint/eslint-plugin": "4.15.0",
-    "@typescript-eslint/parser": "4.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.2",
     "eslint": "7.19.0",
     "eslint-config-prettier": "7.2.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-react": "7.22.0",
