--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@fluentui/react": "8.49.0",
     "@savchenko91/rc-redux-api-mw": "2.0.6",
     "clsx": "1.1.1",
+    "i18next": "^21.6.5",
+    "i18next-http-backend": "^1.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "7.22.5",
+    "react-i18next": "^11.15.3",
     "react-redux": "7.2.6",
     "react-router-dom": "6.1.1",
     "redux": "4.1.2"
@@ -43,6 +46,7 @@
     "@typescript-eslint/parser": "^5.9.0",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
+    "copy-webpack-plugin": "9",
     "css-loader": "5.0.2",
     "eslint": "7.19.0",
     "eslint-config-prettier": "7.2.0",
