--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@fluentui/react": "8.49.0",
     "@savchenko91/rc-redux-api-mw": "2.0.6",
+    "@savchenko91/rc-redux-api-mw-query": "^2.0.6",
     "clsx": "1.1.1",
     "i18next": "^21.6.5",
     "i18next-http-backend": "^1.3.1",
