--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@savchenko91/rc-redux-api-mw": "2.0.6",
     "@savchenko91/rc-redux-api-mw-query": "^2.0.6",
     "clsx": "1.1.1",
+    "final-form": "^4.20.6",
     "i18next": "^21.6.5",
     "i18next-http-backend": "^1.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-hook-form": "7.22.5",
+    "react-final-form": "^6.5.7",
     "react-i18next": "^11.15.3",
     "react-redux": "7.2.6",
     "react-router-dom": "6.1.1",
