--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   "dependencies": {
     "@fluentui/react": "8.49.0",
     "@savchenko91/rc-redux-api-mw": "2.0.6",
-    "@savchenko91/rc-redux-api-mw-query": "^2.0.6",
-    "@savchenko91/schema-validator": "^0.0.0",
+    "@savchenko91/rc-redux-api-mw-query": "2.0.6",
+    "@savchenko91/schema-validator": "0.0.1",
     "clsx": "1.1.1",
     "final-form": "^4.20.6",
     "i18next": "^21.6.5",
     "i18next-http-backend": "^1.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-final-form": "^6.5.7",
-    "react-i18next": "^11.15.3",
+    "react-final-form": "6.5.7",
+    "react-i18next": "11.15.3",
     "react-redux": "7.2.6",
     "react-router-dom": "6.1.1",
     "redux": "4.1.2",
@@ -44,18 +44,18 @@
     "@babel/preset-typescript": "7.12.16",
     "@babel/runtime": "7.13.10",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
+    "@trivago/prettier-plugin-sort-imports": "3.1.1",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
+    "@typescript-eslint/parser": "5.9.0",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "9",
     "css-loader": "5.0.2",
     "eslint": "7.19.0",
     "eslint-config-prettier": "7.2.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-import-resolver-typescript": "2.5.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "6.4.1",
