--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
+    "@babel/plugin-proposal-decorators": "^7.16.7",
     "@babel/plugin-transform-runtime": "7.13.10",
     "@babel/preset-env": "7.12.16",
     "@babel/preset-react": "7.12.13",
