--- a/.babelrc
+++ b/.babelrc
@@ -16,6 +16,7 @@
         "regenerator": true
       }
     ],
-    ["@babel/plugin-proposal-decorators", { "legacy": true }]
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    "@babel/plugin-proposal-class-properties"
   ]
 }
