--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@savchenko91/rc-redux-api-mw-query": "2.0.6",
     "@savchenko91/schema-validator": "0.0.13",
     "clsx": "1.1.1",
+    "decorate-all": "^1.1.1",
     "final-form": "^4.20.6",
     "i18next": "^21.6.5",
     "i18next-http-backend": "^1.3.1",
@@ -34,10 +35,12 @@
     "react-redux": "7.2.6",
     "react-router-dom": "6.1.1",
     "redux": "4.1.2",
+    "reflect-metadata": "^0.1.13",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-decorators": "^7.16.7",
     "@babel/plugin-transform-runtime": "7.13.10",
     "@babel/preset-env": "7.12.16",
