--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@savchenko91/schema-validator": "0.0.13",
     "clsx": "1.1.1",
     "decorate-all": "^1.1.1",
+    "esbuild-typescript-loader": "^0.2.2",
     "final-form": "^4.20.6",
     "i18next": "^21.6.5",
     "i18next-http-backend": "^1.3.1",
@@ -57,6 +58,7 @@
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "9",
     "css-loader": "5.0.2",
+    "esbuild-loader": "^2.18.0",
     "eslint": "7.19.0",
     "eslint-config-prettier": "7.2.0",
     "eslint-import-resolver-typescript": "2.5.0",
