--- a/package.json
+++ b/package.json
@@ -22,27 +22,27 @@
     "@fluentui/react": "8.49.0",
     "@savchenko91/rc-redux-api-mw": "2.0.6",
     "@savchenko91/rc-redux-api-mw-query": "2.0.6",
-    "@savchenko91/schema-validator": "0.0.13",
+    "@savchenko91/schema-validator": "0.0.0",
     "clsx": "1.1.1",
     "decorate-all": "^1.1.1",
     "esbuild-typescript-loader": "^0.2.2",
-    "final-form": "^4.20.6",
-    "i18next": "^21.6.5",
-    "i18next-http-backend": "^1.3.1",
-    "react": "17.0.1",
+    "final-form": "4.20.6",
+    "i18next": "21.6.5",
+    "i18next-http-backend": "1.3.1",
+    "react": "18.0.0",
     "react-dom": "17.0.1",
     "react-final-form": "6.5.7",
     "react-i18next": "11.15.3",
     "react-redux": "7.2.6",
     "react-router-dom": "6.1.1",
     "redux": "4.1.2",
-    "reflect-metadata": "^0.1.13",
-    "typescript": "^4.5.4"
+    "reflect-metadata": "0.1.13",
+    "typescript": "4.5.4"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-decorators": "^7.16.7",
+    "@babel/plugin-proposal-class-properties": "7.16.7",
+    "@babel/plugin-proposal-decorators": "7.16.7",
     "@babel/plugin-transform-runtime": "7.13.10",
     "@babel/preset-env": "7.12.16",
     "@babel/preset-react": "7.12.13",
@@ -58,7 +58,7 @@
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "9",
     "css-loader": "5.0.2",
-    "esbuild-loader": "^2.18.0",
+    "esbuild-loader": "2.18.0",
     "eslint": "7.19.0",
     "eslint-config-prettier": "7.2.0",
     "eslint-import-resolver-typescript": "2.5.0",
