--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "@fluentui/react": "8.49.0",
     "@savchenko91/rc-redux-api-mw": "2.0.6",
     "@savchenko91/rc-redux-api-mw-query": "2.0.6",
-    "@savchenko91/schema-validator": "0.0.0",
+    "@savchenko91/schema-validator": "^0.2.1",
     "clsx": "1.1.1",
     "decorate-all": "^1.1.1",
     "esbuild-typescript-loader": "^0.2.2",
     "final-form": "4.20.6",
     "i18next": "21.6.5",
     "i18next-http-backend": "1.3.1",
-    "react": "18.0.0",
+    "react": "^18.0.0",
     "react-dom": "17.0.1",
     "react-final-form": "6.5.7",
     "react-i18next": "11.15.3",
