--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@fluentui/react": "8.49.0",
     "@savchenko91/rc-redux-api-mw": "2.0.6",
     "@savchenko91/rc-redux-api-mw-query": "2.0.6",
-    "@savchenko91/schema-validator": "^0.2.1",
+    "@savchenko91/schema-validator": "0.2.4",
     "clsx": "1.1.1",
     "decorate-all": "^1.1.1",
     "esbuild-typescript-loader": "^0.2.2",
