--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "@savchenko91/rc-redux-api-mw-query": "2.0.6",
     "@savchenko91/schema-validator": "0.2.4",
     "clsx": "1.1.1",
-    "decorate-all": "^1.1.1",
     "esbuild-typescript-loader": "^0.2.2",
     "final-form": "4.20.6",
     "i18next": "21.6.5",
     "i18next-http-backend": "1.3.1",
-    "react": "^18.0.0",
-    "react-dom": "17.0.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-final-form": "6.5.7",
     "react-i18next": "11.15.3",
     "react-redux": "7.2.6",
     "react-router-dom": "6.1.1",
+    "recoil": "^0.7.2",
     "redux": "4.1.2",
     "reflect-metadata": "0.1.13",
     "typescript": "4.5.4"
