--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "final-form": "4.20.6",
     "i18next": "21.6.5",
     "i18next-http-backend": "1.3.1",
+    "normalizr": "^3.6.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-final-form": "6.5.7",
