--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "clsx": "1.1.1",
     "esbuild-typescript-loader": "^0.2.2",
     "final-form": "4.20.6",
+    "final-form-arrays": "^3.0.2",
     "i18next": "21.6.5",
     "i18next-http-backend": "1.3.1",
     "normalizr": "^3.6.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-final-form": "6.5.7",
+    "react-final-form-arrays": "^3.1.3",
     "react-i18next": "11.15.3",
     "react-redux": "7.2.6",
     "react-router-dom": "6.1.1",
