--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@savchenko91/rc-redux-api-mw": "2.0.6",
     "@savchenko91/rc-redux-api-mw-query": "2.0.6",
     "@savchenko91/schema-validator": "0.2.5",
-    "clsx": "1.1.1",
+    "clsx": "^1.1.1",
     "esbuild-typescript-loader": "^0.2.2",
     "final-form": "4.20.6",
     "final-form-arrays": "^3.0.2",
