--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "esbuild-typescript-loader": "^0.2.2",
     "final-form": "4.20.6",
     "final-form-arrays": "^3.0.2",
+    "fork-ts-checker-webpack-plugin": "^7.2.8",
     "i18next": "21.6.5",
     "i18next-http-backend": "1.3.1",
     "normalizr": "^3.6.2",
