--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "lib": ["DOM", "ESNext"],
-    "jsx": "react-jsx",
+    "jsx": "react",
     "sourceMap": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
