--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
   "dependencies": {
     "@atlaskit/tree": "8.6.0",
     "@fluentui/react": "8.49.0",
-    "@savchenko91/rc-redux-api-mw": "2.0.6",
-    "@savchenko91/rc-redux-api-mw-query": "2.0.6",
     "@savchenko91/schema-validator": "0.2.5",
+    "@types/qs": "^6.9.7",
     "clsx": "1.1.1",
     "esbuild-typescript-loader": "0.2.2",
     "final-form": "4.20.6",
@@ -31,18 +30,15 @@
     "fork-ts-checker-webpack-plugin": "7.2.8",
     "i18next": "21.6.5",
     "i18next-http-backend": "1.3.1",
-    "normalizr": "^3.6.2",
+    "qs": "^6.10.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-final-form": "6.5.7",
     "react-final-form-arrays": "3.1.3",
     "react-i18next": "11.15.3",
     "react-query": "3.38.0",
-    "react-redux": "7.2.6",
     "react-router-dom": "6.1.1",
     "recoil": "0.7.2",
-    "redux": "4.1.2",
-    "reflect-metadata": "0.1.13",
     "typescript": "4.5.4"
   },
   "devDependencies": {
