--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-query": "3.38.0",
     "react-router-dom": "6.1.1",
     "recoil": "0.7.2",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "uuid-random": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
