--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-i18next": "11.15.3",
     "react-query": "3.38.0",
     "react-router-dom": "6.1.1",
+    "react-toastify": "^8.2.0",
     "recoil": "0.7.2",
     "typescript": "4.5.4",
     "uuid-random": "1.3.2"
