--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-final-form": "6.5.7",
     "react-final-form-arrays": "3.1.3",
     "react-i18next": "11.15.3",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-query": "3.38.0",
     "react-router-dom": "6.1.1",
     "react-toastify": "^8.2.0",
