--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-typescript-webpack-starter",
-  "version": "1.0.0",
-  "description": "A starter template for React with Typescript using Webpack 5",
+  "name": "object-manager-system",
+  "version": "0.0.0",
+  "description": "Object Manager System",
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
@@ -9,15 +9,7 @@
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "React",
-    "TypeScript",
-    "Webpack 5",
-    "Starter Template",
-    "Boilerplate"
-  ],
-  "author": "Vishwas",
-  "license": "MIT",
+  "author": "Savchenko Alexander",
   "dependencies": {
     "@atlaskit/tree": "8.6.0",
     "@fluentui/react": "8.49.0",
