--- a/package.json
+++ b/package.json
@@ -14,24 +14,24 @@
     "@atlaskit/tree": "8.6.0",
     "@fluentui/react": "8.49.0",
     "@savchenko91/schema-validator": "0.2.5",
-    "@types/qs": "^6.9.7",
+    "@types/qs": "6.9.7",
     "clsx": "1.1.1",
     "esbuild-typescript-loader": "0.2.2",
     "final-form": "4.20.6",
-    "final-form-arrays": "^3.0.2",
+    "final-form-arrays": "3.0.2",
     "fork-ts-checker-webpack-plugin": "7.2.8",
     "i18next": "21.6.5",
     "i18next-http-backend": "1.3.1",
-    "qs": "^6.10.3",
+    "qs": "6.10.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-final-form": "6.5.7",
     "react-final-form-arrays": "3.1.3",
     "react-i18next": "11.15.3",
-    "react-perfect-scrollbar": "^1.5.8",
+    "react-perfect-scrollbar": "1.5.8",
     "react-query": "3.38.0",
     "react-router-dom": "6.1.1",
-    "react-toastify": "^8.2.0",
+    "react-toastify": "8.2.0",
     "recoil": "0.7.2",
     "typescript": "4.5.4",
     "uuid-random": "1.3.2"
