--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@savchenko91/schema-validator": "0.2.8",
     "@types/qs": "6.9.7",
     "@types/react-dom": "18.0.3",
+    "@types/uniqid": "^5.3.2",
     "clsx": "1.1.1",
     "esbuild-typescript-loader": "0.2.2",
     "final-form": "4.20.6",
@@ -35,6 +36,7 @@
     "react-toastify": "8.2.0",
     "recoil": "0.7.2",
     "typescript": "4.5.4",
+    "uniqid": "5.4.0",
     "uuid-random": "1.3.2"
   },
   "devDependencies": {
