--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "i18next-http-backend": "1.3.1",
     "qs": "6.10.3",
     "react": "18.0.0",
+    "react-ace": "10.1.0",
     "react-dom": "18.0.0",
     "react-final-form": "6.5.7",
     "react-final-form-arrays": "3.1.3",
