--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "object-manager-system",
   "version": "0.0.0",
   "description": "Object Manager System",
+  "author": "Savchenko Alexander",
+  "license": "UNLICENSED",
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
@@ -9,7 +11,6 @@
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "test": "jest"
   },
-  "author": "Savchenko Alexander",
   "dependencies": {
     "@atlaskit/tree": "8.6.0",
     "@fluentui/react": "8.49.0",
