--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@atlaskit/tree": "8.6.0",
     "@fluentui/react": "8.49.0",
     "@savchenko91/schema-validator": "0.2.8",
-    "@types/object-diff": "^0.0.2",
+    "@types/lodash.get": "4.4.7",
+    "@types/object-diff": "0.0.2",
     "@types/qs": "6.9.7",
     "@types/react-dom": "18.0.3",
     "@types/uniqid": "^5.3.2",
@@ -26,7 +27,8 @@
     "fork-ts-checker-webpack-plugin": "7.2.8",
     "i18next": "21.6.5",
     "i18next-http-backend": "1.3.1",
-    "object-diff": "^0.0.4",
+    "lodash.get": "4.4.2",
+    "object-diff": "0.0.4",
     "qs": "6.10.3",
     "react": "18.0.0",
     "react-ace": "10.1.0",
