--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "i18next-http-backend": "1.3.1",
     "lodash.get": "4.4.2",
     "object-diff": "0.0.4",
+    "omit-empty-es": "1.1.3",
     "qs": "6.10.3",
     "react": "18.0.0",
     "react-ace": "10.1.0",
