--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "dependencies": {
     "@atlaskit/tree": "8.6.0",
     "@fluentui/react": "8.49.0",
-    "@savchenko91/rc-route-constant": "^4.0.4",
+    "@savchenko91/rc-route-constant": "4.0.4",
     "@savchenko91/schema-validator": "0.2.9",
     "@types/lodash.get": "4.4.7",
     "@types/object-diff": "0.0.2",
     "@types/qs": "6.9.7",
     "@types/react-dom": "18.0.3",
-    "@types/uniqid": "^5.3.2",
+    "@types/uniqid": "5.3.2",
     "clsx": "1.1.1",
+    "deep-object-diff": "1.1.7",
     "esbuild-typescript-loader": "0.2.2",
     "final-form": "4.20.6",
     "final-form-arrays": "3.0.2",
@@ -29,7 +30,6 @@
     "i18next": "21.6.5",
     "i18next-http-backend": "1.3.1",
     "lodash.get": "4.4.2",
-    "object-diff": "0.0.4",
     "omit-empty-es": "1.1.3",
     "qs": "6.10.3",
     "react": "18.0.0",
@@ -83,7 +83,7 @@
     "prettier": "2.2.1",
     "react-refresh": "0.9.0",
     "style-loader": "2.0.0",
-    "ts-jest": "^28.0.1",
+    "ts-jest": "28.0.1",
     "webpack": "5.21.2",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2",
