--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "i18next": "21.6.5",
     "i18next-http-backend": "1.3.1",
     "lodash.get": "4.4.2",
+    "modules": "^0.4.0",
+    "node": "^17.7.2",
     "omit-empty-es": "1.1.3",
     "qs": "6.10.3",
     "react": "18.0.0",
