tree height fix

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@atlaskit/tree": "8.6.0",
     "@fluentui/react": "8.49.0",
     "@savchenko91/rc-route-constant": "4.0.4",
-    "@savchenko91/schema-validator": "0.2.14",
+    "@savchenko91/schema-validator": "0.2.15",
     "@types/lodash.get": "4.4.7",
     "@types/object-diff": "0.0.2",
     "@types/qs": "6.9.7",
@@ -34,6 +34,7 @@
     "qs": "6.10.3",
     "react": "18.0.0",
     "react-ace": "10.1.0",
+    "react-animate-height": "^3.0.3",
     "react-collapsed": "3.3.1",
     "react-dom": "18.0.0",
     "react-final-form": "6.5.7",
