--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fluentui/react": "8.49.0",
     "@savchenko91/rc-route-constant": "4.0.4",
     "@savchenko91/schema-validator": "0.2.15",
+    "@types/lodash.clonedeep": "^4.5.7",
     "@types/lodash.get": "4.4.7",
     "@types/object-diff": "0.0.2",
     "@types/qs": "6.9.7",
@@ -29,6 +30,7 @@
     "fork-ts-checker-webpack-plugin": "7.2.8",
     "i18next": "21.6.5",
     "i18next-http-backend": "1.3.1",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.get": "4.4.2",
     "omit-empty-es": "1.1.3",
     "qs": "6.10.3",
