--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
+    "deliver-to-prod": "./deliver-code-to-prod.sh",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
