--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "prettier": "2.2.1",
     "react-refresh": "0.9.0",
     "style-loader": "2.0.0",
+    "terser-webpack-plugin": "^5.3.3",
     "ts-jest": "28.0.1",
     "webpack": "5.21.2",
     "webpack-cli": "4.5.0",
