--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "18.0.0",
     "react-ace": "10.1.0",
     "react-animate-height": "^3.0.3",
+    "react-auto-animated-container": "^1.0.9",
     "react-collapsed": "3.3.1",
     "react-dom": "18.0.0",
     "react-final-form": "6.5.7",
