--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/uniqid": "5.3.2",
     "clsx": "1.1.1",
     "deep-object-diff": "1.1.7",
+    "dictionaryjs": "1.0.9",
     "esbuild-typescript-loader": "0.2.2",
     "final-form": "4.20.6",
     "final-form-arrays": "3.0.2",
@@ -48,6 +49,7 @@
     "react-router-dom": "6.1.1",
     "react-toastify": "8.2.0",
     "recoil": "0.7.2",
+    "tree-model": "1.0.7",
     "typescript": "4.5.4",
     "uniqid": "5.4.0",
     "uuid-random": "1.3.2"
