--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/qs": "6.9.7",
     "@types/react-dom": "18.0.3",
     "@types/uniqid": "5.3.2",
+    "axios": "0.27.2",
     "clsx": "1.1.1",
     "deep-object-diff": "1.1.7",
     "dictionaryjs": "1.0.9",
